// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayImageCard should render a ClayImageCard with actionItems 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
      <div class="flex-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
          <div class="dropdown-menu">
            <ul class="list-unstyled">
              <li>
                <a class=" dropdown-item" href="#1">Edit</a>
              </li>
              <li>
                <a class=" dropdown-item" href="#1">Save</a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with classes 1`] = `
<div class="card-type-asset card my-custom-class">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with icon 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents">
        <use xlink:href="icons.svg#documents"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with id 1`] = `
<div class="card-type-asset card" id="myId">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with imageAlt 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with imageSrc 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered">
    <img alt="" class="aspect-ratio-item-center-middle aspect-ratio-item-fluid" src="thumbnail_coffee.jpg">
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with input \`name\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" class="custom-control-input" name="checkbox01" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-type-asset">
        <div class="aspect-ratio card-item-first bg-checkered"></div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand"></div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with input \`value\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" class="custom-control-input" name="checkbox" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-type-asset">
        <div class="aspect-ratio card-item-first bg-checkered"></div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand"></div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with label 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-detail">
          <span class="label label-secondary">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with labelStyle \`danger color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-detail">
          <span class="label label-danger">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with labelStyle \`info color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-detail">
          <span class="label label-info">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with labelStyle \`secondary color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-detail">
          <span class="label label-secondary">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with labelStyle \`success color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-detail">
          <span class="label label-success">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with labelStyle \`warning color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-detail">
          <span class="label label-warning">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with subtitle 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-subtitle text-truncate" title="Author Action">Author Action</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with title 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="empty-background.png">empty-background.png</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with type \`danger color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered">
    <span class="sticker sticker-danger sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with type \`dark color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered">
    <span class="sticker sticker-dark sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with type \`info color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered">
    <span class="sticker sticker-info sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with type \`light color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered">
    <span class="sticker sticker-light sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with type \`primary color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered">
    <span class="sticker sticker-primary sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with type \`secondary color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered">
    <span class="sticker sticker-secondary sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with type \`success color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered">
    <span class="sticker sticker-success sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with type \`warning color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered">
    <span class="sticker sticker-warning sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with type 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered">
    <span class="sticker sticker-primary sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a ClayImageCard with url 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <a class=" card-title text-truncate" href="#1"></a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayImageCard should render a disabled ClayImageCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-type-asset">
        <div class="aspect-ratio card-item-first bg-checkered"></div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand"></div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayImageCard should render a selected ClayImageCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" class="custom-control-input" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-type-asset">
        <div class="aspect-ratio card-item-first bg-checkered"></div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand"></div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayImageCard should render the default markup 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first bg-checkered"></div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand"></div>
    </div>
  </div>
</div>
`;
